cmake_minimum_required(VERSION 3.21)
include($ENV{XMOS_CMAKE_PATH}/xcommon.cmake)
project(lib_src_tests)

add_subdirectory(asrc_task_test)
add_subdirectory(asrc_task_test_ppm)
add_subdirectory(asrc_test)
add_subdirectory(asrc_test_xscope_fileio)
add_subdirectory(asrc_vpu_test)
add_subdirectory(asynchronous_fifo_asrc_test)
add_subdirectory(ds3_test)
add_subdirectory(ds3_voice_test)
add_subdirectory(os3_test)
add_subdirectory(ssrc_test)
add_subdirectory(unity_gain_voice_test)
add_subdirectory(us3_voice_test)
add_subdirectory(vpu_ff3_test)
add_subdirectory(vpu_rat_test)
